modify responsive in the project

--- a/index.html
+++ b/index.html
@@ -468,22 +468,22 @@
 <section class="brand">
 <div class="container">
   <div class="row justify-content-center">
-    <div class=" col-sm-6 col-md-4 col-lg-2">
+    <div class=" col-6 col-md-4 col-lg-2">
       <a href="#"><img src="imgs/brand/img-1.png" alt=""></a>
     </div>
-    <div class=" col-sm-6 col-md-4 col-lg-2">
+    <div class=" col-6 col-md-4 col-lg-2">
       <a href="#"><img src="imgs/brand/img-2.png" alt=""></a>
     </div>
-    <div class=" col-sm-6 col-md-4 col-lg-2">
+    <div class=" col-6 col-md-4 col-lg-2">
       <a href="#"><img src="imgs/brand/img-3.png" alt=""></a>
     </div>
-    <div class=" col-sm-6 col-md-4 col-lg-2">
+    <div class=" col-6 col-md-4 col-lg-2">
       <a href="#"><img src="imgs/brand/img-4.png" alt=""></a>
     </div>
-    <div class=" col-sm-6 col-md-4 col-lg-2">
+    <div class=" col-6 col-md-4 col-lg-2">
       <a href="#"><img src="imgs/brand/img-5.png" alt=""></a>
     </div>
-    <div class="col-12 col-sm-6 col-md-4 col-lg-2">
+    <div class="col-6 col-md-4 col-lg-2">
       <a href="#"><img src="imgs/brand/img-6.png" alt=""></a>
     </div>
   </div>
@@ -653,10 +653,10 @@
     <div class="row">
       <div class="card col-md-12 col-xl-6">
         <div class="row no-gutters">
-          <div class="col-2 text-center">
+          <div class="col-3 text-center">
             <img class="avatar" src="imgs/happy-client/happy1.png" alt="...">
           </div>
-          <div class="col-10">
+          <div class="col-9">
             <div class="card-body pt-0">
               <h4 class="card-title">MATTHEW DIX</h4>
               <p class="font-italic">Graphic Design</p>
@@ -668,10 +668,10 @@
       </div>
       <div class="card col-md-12 col-xl-6"">
         <div class="row no-gutters">
-          <div class="col-2 text-center">
+          <div class="col-3 text-center">
             <img class="avatar" src="imgs/happy-client/happy2.png" alt="...">
           </div>
-          <div class="col-10">
+          <div class="col-9">
             <div class="card-body pt-0">
               <h4 class="card-title">NICK KARVOUNIS</h4>
               <p class="font-italic">Graphic Design</p>
@@ -683,10 +683,10 @@
       </div>
       <div class="card col-md-12 col-xl-6"">
         <div class="row no-gutters">
-          <div class="col-2 text-center">
+          <div class="col-3 text-center">
             <img class="avatar" src="imgs/happy-client/happy3.png" alt="...">
           </div>
-          <div class="col-10">
+          <div class="col-9">
             <div class="card-body pt-0">
               <h4 class="card-title">JAELYNN CASTILLO</h4>
               <p class="font-italic">Graphic Design</p>
@@ -698,10 +698,10 @@
       </div>
       <div class="card col-md-12 col-xl-6"">
         <div class="row no-gutters">
-          <div class="col-2 text-center">
+          <div class="col-3 text-center">
             <img class="avatar" src="imgs/happy-client/happy4.jpg" alt="...">
           </div>
-          <div class="col-10">
+          <div class="col-9">
             <div class="card-body pt-0">
               <h4 class="card-title">MIKE PETRUCCI</h4>
               <p class="font-italic">Graphic Design</p>
