--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <!----------- links ---------->
           <div class="collapse justify-content-end navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item ">
+              <li class="nav-item active">
                 <a class="nav-link" href="#about">About </a>
               </li>
               <li class="nav-item">
@@ -299,8 +299,7 @@
                   </a>
                 </h5>
               </div>
-          
-              <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+              <div id="collapseOne" class="overflow-auto collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                 <p class="card-body font-italic">
                   Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
                   nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
@@ -319,10 +318,10 @@
                   </a>
                 </h4>
               </div>
-              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+              <div id="collapseTwo" class="overflow-auto collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                 <p class="card-body font-italic">
                   Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                </p>
+                  nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.                </p>
               </div>
             </div>
             <div class="card">
@@ -338,10 +337,10 @@
                   </a>
                 </h4>
               </div>
-              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+              <div id="collapseThree" class="overflow-auto collapse" aria-labelledby="headingThree" data-parent="#accordion">
                 <p class="card-body font-italic">
-                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. 
-                </p>
+                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                  nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.                </p>
               </div>
             </div>
           </div>
@@ -895,6 +894,8 @@
             <a class="more-photo">View more photos</a>
         </div>
       </div>
+    </div>
+    <div class="copyright mt-5 py-2 border-top text-center">Copyright © 2021 <a class="text-danger" target="_blank" href="https://github.com/ahmedsabahi">Ahmed El-Sabahi</a>. All Rights Reserved.
     </div>
   </div>
 </footer>
